Sets up getting a specific sheet

--- a/WPIMajorTracking/secured/userHome.html
+++ b/WPIMajorTracking/secured/userHome.html
@@ -3,7 +3,7 @@
 {% block head %}
 
 <link rel='stylesheet' href='/css/userLanding.css'>
-
+<script type='text/javascript' src='/js/userHome.js'></script>
 {% endblock %}
 
 
