--- a/WPIMajorTracking/secured/majorsheet.html
+++ b/WPIMajorTracking/secured/majorsheet.html
@@ -6,48 +6,57 @@
 <div style="visibility: hidden;">joi</div>
 
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">COMPUTER SCIENCE</a>
-    </div>
-    <div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">IQP</a></li>
-        <li><a href="#">MQP</a></li> 
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Humanities & Arts
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Depth Component</a></li>
-            <li><a href="#">Breath Component</a></li>
-            <li><a href="#">Humanities Electives</a></li> 
-          </ul>
-        </li>
-        <li><a href="#">PE</a></li> 
-        <li><a href="#">Social Science</a></li>
-        <li><a href="#">Free Electives</a></li> 
-        <li><a href="#">Computer Science</a></li> 
-        <li><a href="#">Math</a></li>
-        <li><a href="#">Science</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">COMPUTER SCIENCE</a>
+		</div>
+		<div style="text-align: center;">
+			<ul class="nav navbar-nav">
+				<li>
+					<a href="#">
+						<span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
+					</a>
+				</li>
+				<li><a href="#">IQP</a></li>
+				<li><a href="#">MQP</a></li> 
+				<li class="dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Humanities & Arts
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Depth Component</a></li>
+							<li><a href="#">Breath Component</a></li>
+							<li><a href="#">Humanities Electives</a></li> 
+						</ul>
+					</li>
+					<li><a href="#">PE</a></li> 
+					<li><a href="#">Social Science</a></li>
+					<li><a href="#">Free Electives</a></li> 
+					<li><a href="#">Computer Science</a></li> 
+					<li><a href="#">Math</a></li>
+					<li><a href="#">Science</a></li>
+				</ul>
+			</div>
+		</div>
 
-<div id="sheetList" class="interaction-block">
-<form class="form-inline">
-	<div class="form-group">
-		<label for="advisor-name">Name</label>
-		<input type="text" class="form-control" id="advisor-name" placeholder="Advisor's Name">
-		<label for="advisor-email">Email</label>
-		<input type="text" class="form-control" id="advisor-email" placeholder="Advisor's Email">
-		<button type="submit" class="btn-margin btn btn-success">
-      <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-        Send Invitation
-    </button>
+		<!-- <div class="interaction-block" style="margin:auto;"> -->
+		<form class="form-inline" style="text-align: center;">
+			<div class="form-group">
+				<label for="advisor-name">Name</label>
+				<input type="text" class="form-control" id="advisor-name" placeholder="Advisor's Name">
+				<label for="advisor-email">Email</label>
+				<input type="text" class="form-control" id="advisor-email" placeholder="Advisor's Email">
+				<button type="submit" class="btn-margin btn btn-success">
+					<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+					Send Invitation
+				</button>
+			</div>
+		</form>
 	</div>
-</form>
-</div>
+	</nav>
 
-{% endblock %}
+	
+
+
+
+
+	{% endblock %}
