--- a/WPIMajorTracking/secured/majorsheet.html
+++ b/WPIMajorTracking/secured/majorsheet.html
@@ -8,7 +8,7 @@
 <nav class="navbar navbar-inverse">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#">COMPUTER SCIENCE</a>
+			<a class="navbar-brand headerFont" href="#">Computer Science</a>
 		</div>
 		<div style="text-align: center;">
 			<ul class="nav navbar-nav">
