--- a/WPIMajorTracking/secured/majorsheet.html
+++ b/WPIMajorTracking/secured/majorsheet.html
@@ -1,14 +1,14 @@
 {% extends "templates/main.html" %}
 {% block head %}
 <link rel="stylesheet" type="text/css" href="/css/userLanding.css">
-{% endblock %} 
+{% endblock %}
 {% block maincontent %}
 <div style="visibility: hidden;">joi</div>
 
 <nav class="navbar navbar-inverse">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand headerFont" href="#">Computer Science</a>
+			<div class="headerFont" href="#">Computer Science</div>
 		</div>
 		<div style="text-align: center;">
 			<ul class="nav navbar-nav">
@@ -18,20 +18,20 @@
 					</a>
 				</li>
 				<li><a href="#">IQP</a></li>
-				<li><a href="#">MQP</a></li> 
+				<li><a href="#">MQP</a></li>
 				<li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Humanities & Arts
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">Depth Component</a></li>
 							<li><a href="#">Breath Component</a></li>
-							<li><a href="#">Humanities Electives</a></li> 
+							<li><a href="#">Humanities Electives</a></li>
 						</ul>
 					</li>
-					<li><a href="#">PE</a></li> 
+					<li><a href="#">PE</a></li>
 					<li><a href="#">Social Science</a></li>
-					<li><a href="#">Free Electives</a></li> 
-					<li><a href="#">Computer Science</a></li> 
+					<li><a href="#">Free Electives</a></li>
+					<li><a href="#">Computer Science</a></li>
 					<li><a href="#">Math</a></li>
 					<li><a href="#">Science</a></li>
 				</ul>
@@ -54,7 +54,7 @@
 	</div>
 	</nav>
 
-	
+
 
 
 
