--- a/WPIMajorTracking/secured/majorsheet.html
+++ b/WPIMajorTracking/secured/majorsheet.html
@@ -13,7 +13,7 @@
 		<div style="text-align: center;">
 			<ul class="nav navbar-nav">
 				<li>
-					<a href="#">
+					<a href="/">
 						<span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
 					</a>
 				</li>
