Sheets now update in the datastore

--- a/WPIMajorTracking/secured/majorsheet.html
+++ b/WPIMajorTracking/secured/majorsheet.html
@@ -79,7 +79,7 @@
 
 	<hr>
 
-	<form>
+	<form method='post'>
 		<div class="majorsheet-box" id="iqp">
 			<h3>IQP</h3>
 			<div class="form-group inline">
